# aioworkers-orm

./: .editorconfig  .gitignore  .travis.yml  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  codecov.yaml
aioworkers_orm/: converter.py  databases.py  factory.py  models.py  registry.py  utils.py
app/: models.py
app/first/: models.py
app/second/: models.py
tests/: conftest.py  models.py  test_all_models.py  test_databases.py  test_model_factory.py  test_models.py  test_models_filter.py  test_models_list.py  test_multi_models.py  test_registry.py  test_schema_models.py
tests/app/: model_first.py  models.py
tests/app/first/: models.py
tests/app/second/: models.py
